[gd_scene load_steps=7 format=2]

[ext_resource path="res://ui/empty_heart.png" type="Texture" id=1]
[ext_resource path="res://ui/hud.gd" type="Script" id=2]
[ext_resource path="res://ui/heart.png" type="Texture" id=3]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "dead",
"speed": 5.0
}, {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "live",
"speed": 5.0
} ]

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0, 1, 0.835294, 1 )
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color( 0.34902, 0.12549, 0.380392, 1 )
border_blend = true
corner_radius_top_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.152941, 0.152941, 0.152941, 1 )
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color( 0.403922, 0.686275, 0.462745, 1 )
border_blend = true
corner_radius_top_right = 10
corner_radius_bottom_left = 10
expand_margin_left = 5.0
expand_margin_right = 5.0
expand_margin_top = 5.0
expand_margin_bottom = 5.0

[node name="HUD" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = 16.0
margin_top = 16.0
margin_right = 132.0
margin_bottom = 56.0
color = Color( 0.152941, 0.152941, 0.152941, 0.784314 )

[node name="CenterContainer" type="CenterContainer" parent="ColorRect"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="ColorRect/CenterContainer"]
margin_left = 20.0
margin_top = 4.0
margin_right = 96.0
margin_bottom = 36.0
alignment = 1

[node name="ScoreLabel" type="Label" parent="ColorRect/CenterContainer/VBoxContainer"]
margin_right = 76.0
margin_bottom = 14.0
grow_vertical = 2
text = "Score: 0"
valign = 1

[node name="TimeLabel" type="Label" parent="ColorRect/CenterContainer/VBoxContainer"]
margin_top = 18.0
margin_right = 76.0
margin_bottom = 32.0
grow_vertical = 2
text = "Time: 00:00"
valign = 1

[node name="ColorRect2" type="ColorRect" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 32.0
margin_top = -60.0
margin_right = 120.0
margin_bottom = -28.0
color = Color( 0.152941, 0.152941, 0.152941, 0.784314 )

[node name="CenterContainer" type="CenterContainer" parent="ColorRect2"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="HBoxContainer" type="HBoxContainer" parent="ColorRect2/CenterContainer"]
margin_left = 24.0
margin_top = 16.0
margin_right = 64.0
margin_bottom = 16.0

[node name="Control" type="Control" parent="ColorRect2/CenterContainer/HBoxContainer"]
margin_right = 16.0
rect_min_size = Vector2( 16, 0 )

[node name="Heart3" type="AnimatedSprite" parent="ColorRect2/CenterContainer/HBoxContainer/Control"]
frames = SubResource( 1 )
animation = "live"

[node name="Control2" type="Control" parent="ColorRect2/CenterContainer/HBoxContainer"]
margin_left = 20.0
margin_right = 36.0
rect_min_size = Vector2( 16, 0 )

[node name="Heart2" type="AnimatedSprite" parent="ColorRect2/CenterContainer/HBoxContainer/Control2"]
frames = SubResource( 1 )
animation = "live"

[node name="Control3" type="Control" parent="ColorRect2/CenterContainer/HBoxContainer"]
margin_left = 40.0
margin_right = 40.0

[node name="Heart1" type="AnimatedSprite" parent="ColorRect2/CenterContainer/HBoxContainer/Control3"]
frames = SubResource( 1 )
animation = "live"

[node name="BossHealthBar" type="ProgressBar" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -250.0
margin_top = 30.0
margin_right = 250.0
margin_bottom = 50.0
custom_styles/fg = SubResource( 3 )
custom_styles/bg = SubResource( 2 )
max_value = 25.0
step = 1.0
value = 25.0
